[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menu/SubMenus/SubMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/themes/BlueColorTheme.tres" type="Theme" id=2]
[ext_resource path="res://Menu/SubMenus/options.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/berlinsansfb_72.tres" type="DynamicFont" id=4]
[ext_resource path="res://Menu/SubMenus/resolution.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]

[node name="OptionsMenu" index="0" instance=ExtResource( 1 )]

[node name="CenterContainer" parent="." index="1"]
theme = ExtResource( 2 )

[node name="VBoxContainer" parent="CenterContainer" index="0"]
margin_left = 446.0
margin_top = 249.0
margin_right = 1090.0
margin_bottom = 615.0

[node name="Label" parent="CenterContainer/VBoxContainer" index="0"]
margin_right = 644.0
margin_bottom = 90.0
text = "Options Menu Scene"

[node name="OptionsWrapper" type="GridContainer" parent="CenterContainer/VBoxContainer" index="1"]
margin_top = 94.0
margin_right = 644.0
margin_bottom = 326.0
script = ExtResource( 3 )
SoundFX_Volume = NodePath("VBoxContainer/SoundSettings/VBoxContainer/SoundFX_Volume")
SoundFX_Toggle = NodePath("VBoxContainer/SoundSettings/VBoxContainer/SoundFX_Toggle")
Music_Volume = NodePath("VBoxContainer/SoundSettings/VBoxContainer2/Music_Volume")
Music_Toggle = NodePath("VBoxContainer/SoundSettings/VBoxContainer2/Music_Toggle")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/OptionsWrapper" index="0"]
margin_right = 644.0
margin_bottom = 232.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="SoundSettings" type="HBoxContainer" parent="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer" index="0"]
margin_right = 644.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer/SoundSettings" index="0"]
margin_left = 47.0
margin_right = 358.0
margin_bottom = 98.0

[node name="SoundFX_Toggle" type="CheckButton" parent="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer/SoundSettings/VBoxContainer" index="0"]
margin_right = 311.0
margin_bottom = 90.0
hint_tooltip = "toggle soundfx"
focus_neighbour_right = NodePath("../../VBoxContainer2/Music_Toggle")
focus_neighbour_bottom = NodePath("../SoundFX_Volume")
focus_next = NodePath("../SoundFX_Volume")
focus_previous = NodePath("../../../../../BackButton")
custom_fonts/font = ExtResource( 4 )
pressed = true
text = "Soundfx"
align = 1

[node name="SoundFX_Volume" type="HSlider" parent="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer/SoundSettings/VBoxContainer" index="1"]
margin_top = 94.0
margin_right = 311.0
margin_bottom = 98.0
custom_styles/grabber_highlight = SubResource( 1 )
ticks_on_borders = true

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer/SoundSettings" index="1"]
margin_left = 362.0
margin_right = 597.0
margin_bottom = 98.0

[node name="Music_Toggle" type="CheckButton" parent="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer/SoundSettings/VBoxContainer2" index="0"]
margin_right = 235.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 4 )
pressed = true
text = "Music"
align = 1

[node name="Music_Volume" type="HSlider" parent="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer/SoundSettings/VBoxContainer2" index="1"]
margin_top = 94.0
margin_right = 235.0
margin_bottom = 98.0
ticks_on_borders = true

[node name="FullscreenToggle" type="HBoxContainer" parent="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer" index="1"]
margin_top = 102.0
margin_right = 644.0
margin_bottom = 192.0
alignment = 1

[node name="FullscreenToggle" type="CheckButton" parent="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer/FullscreenToggle" index="0"]
margin_left = 135.0
margin_right = 509.0
margin_bottom = 90.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Fullscreen"
align = 1

[node name="Resolution" type="HBoxContainer" parent="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer" index="2"]
margin_top = 196.0
margin_right = 644.0
margin_bottom = 232.0
script = ExtResource( 5 )

[node name="1080p" type="CheckBox" parent="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer/Resolution" index="0"]
margin_right = 151.0
margin_bottom = 36.0
text = "1920 x 1080"

[node name="720p" type="CheckBox" parent="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer/Resolution" index="1"]
margin_left = 155.0
margin_right = 292.0
margin_bottom = 36.0
text = "1280 x 720"

[node name="BackButton" parent="CenterContainer/VBoxContainer" index="2"]
margin_top = 330.0
margin_right = 644.0
margin_bottom = 366.0
[connection signal="toggled" from="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer/SoundSettings/VBoxContainer/SoundFX_Toggle" to="CenterContainer/VBoxContainer/OptionsWrapper" method="_on_SoundFX_toggled"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer/SoundSettings/VBoxContainer/SoundFX_Volume" to="CenterContainer/VBoxContainer/OptionsWrapper" method="_on_SoundFX_Volume_value_changed"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer/SoundSettings/VBoxContainer2/Music_Toggle" to="CenterContainer/VBoxContainer/OptionsWrapper" method="_on_Music_toggled"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer/SoundSettings/VBoxContainer2/Music_Volume" to="CenterContainer/VBoxContainer/OptionsWrapper" method="_on_Music_Volume_value_changed"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer/FullscreenToggle/FullscreenToggle" to="CenterContainer/VBoxContainer/OptionsWrapper" method="_on_Fullscreen_toggled"]
[connection signal="change_resolution" from="CenterContainer/VBoxContainer/OptionsWrapper/VBoxContainer/Resolution" to="CenterContainer/VBoxContainer/OptionsWrapper" method="_on_Resolution_change_resolution"]
